--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
             </div>
             <div id="boxes">
                 <div id="box1">
-                    <img src="/Assets/Camp Images/High Quality Images/Mount Ulap.png" alt="ulap image">
+                    <img src="/Assets/Camp Images/Compressed Images/Mount Ulap.jpg" alt="ulap image">
                     <h1>Mount Ulap <span>$104.99/night</span></h1>
                     <p>Mount ulap is a 7.7 kilometer moderately trafficked point-to-point trail located near Tuba, Benguet, 
                         Philippines that offers the chance to see widelife and is rated as moderate.
