--- a/src/searchpage.html
+++ b/src/searchpage.html
@@ -8,9 +8,27 @@
     <link rel="stylesheet" href="../dist/output.css">
 </head>
 <body>
+    <!-- nav bar -->
+    <nav class="bg-gray-50 w-4/5 sm:mx-auto mx-auto py-4 px-6 my-3 flex md:justify-between lg:justify-between items-center">
+        <div class="flex items-center">
+            <img src="../Assets/Logo.svg" alt="Logo" class="w-1/2 md:w-4/5 lg:w-full h-8">
+            <a href="#" class="ml-4 text-ash hover:no-underline hover:text-ash hidden lg:block">Home</a>
+        </div>
+        <!-- <button id="hamburger-menu" class="lg:hidden">
+            ☰  Hamburger icon 
+        </button> -->
+        <img src="../Assets/Hamburger Menu.svg" id="hamburger-menu" class="lg:hidden" alt="hamburger-menu"/>
+
+        <div id="menu-items" class="hidden lg:text-lg md:text-[15px] text-[10px] lg:flex lg:flex-row items-center space-x-1 lg:space-x-4">
+            <a href="#" class="text-ash hover:no-underline hover:text-ash mr-1 md:mr-4 lg:mr-4">Login</a>
+            <button class="bg-black text-white py-2 px-4 hover:bg-opacity-80">Create Account</button>
+        </div>
+    </nav>
+
+
     <!-- Search Page -->
     <section class="w-4/5 mx-auto">
-        <div class="bg-[#11B5E4] p-0 md:p-10 lg:p-10 flex justify-center items-center md:justify-start lg:justify-start lg:items-center ">
+        <div class="bg-gray-100 p-0 md:p-10 lg:p-10 flex justify-center items-center md:justify-start lg:justify-start lg:items-center ">
            <!-- Search Page Welcome card -->
             <div class="w-[95%] md:w-9/12 lg:w-1/4 grid grid-flow-row gap-1 ">
                 <h1 class="text-3xl font-bold">Welcome to YelpCamp!</h1>
