--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
           />
         </div> -->
         <!-- ABOUT -->
-        <div class="order-first md:order-none sm:order-none">
+        <div class="w-1/2">
           <img
             class="visible md:hidden sm:hidden hover:animate-bounce pt-8 pb-40"
             src="../Assets/Logo.svg"
@@ -28,24 +28,29 @@
             YelpCamp is a curated list of the best camping spots on Earth.
             Unfiltered and Unbiased reviews
           </p>
+          <div class="grid grid-flow-row gap-3">
+            <div class="flex gap-3">
+              <img src="/Assets/Checkmark.svg"/>
+              <p>Add your own camp suggestions.</p>
+            </div>
+            <div class="flex gap-3">
+              <img src="/Assets/Checkmark.svg"/>
+              <p>Leave reviews and experiences.</p>
+            </div>
+            <div class="flex gap-3">
+              <img src="/Assets/Checkmark.svg"/>
+              <p>See locations for all camps.</p>
+            </div>
+
+            <!-- BUTTON -->
+            <button
+            id="gotosearch" class="bg-black text-white text-sm font-medium w-44 h-12 rounded">View Campgrounds
+            </button>
+          </div>
+
         </div>
 
-        <!-- LIST -->
-        <div>
-          <ul class="pl-7 list-image-[url(../Assets/Checkmark.svg)]">
-            <li>Add your own camp suggestions.</li>
-            <li>Leave reviews and experiences.</li>
-            <li>See locations for all camps.</li>
-          </ul>
-        </div>
-
-        <!-- BUTTON -->
-        <div class="pt-9 pb-16">
-          <button
-            id="gotosearch" class="bg-black text-white text-sm font-medium w-44 h-12 rounded"
-          >View Campgrounds
-          </button>
-        </div>
+        
 
         <p>Partnered with:</p>
 
@@ -55,12 +60,17 @@
           <img src="../Assets/Plum Guide.svg" />
         </div>
       </div>
-      <div class="lg:order-none md:order-first order-first">
-        <img
-          class="lg:hidden md:visible visible hover:animate-bounce p-12"
+
+      <div class="lg:w-1/2 w-full lg:flex-row flex-col flex lg:justify-end lg:order-none md:order-first order-first">
+        <div>
+          <img
+          class="w-14 lg:hidden md:visible visible hover:animate-bounce"
           src="../Assets/Logo.svg"
         />
-        <img class="w-full" src="../Assets/Hero Image.jpg" />
+        </div>
+        <div class="w-full lg:w-4/5">
+          <img src="../Assets/Hero Image.jpg" />
+        </div>
       </div>
     </div>
 
