--- a/src/searchpage.html
+++ b/src/searchpage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Search for campgrounds</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
     <link rel="stylesheet" href="../dist/output.css">
 </head>
@@ -29,13 +29,13 @@
 
     <!-- Search Page -->
     <section class="w-4/5 mx-auto">
-        <div class="bg-gray-100 p-0 md:p-10 lg:p-10 flex justify-center items-center md:justify-start lg:justify-start lg:items-center ">
+        <div class="bg-gray-50 p-0 md:p-10 lg:p-10 flex justify-center items-center md:justify-start lg:justify-start lg:items-center ">
            <!-- Search Page Welcome card -->
             <div class="w-[95%] md:w-9/12 lg:w-1/4 grid grid-flow-row gap-1 ">
                 <h1 class="text-3xl font-bold">Welcome to YelpCamp!</h1>
                 <p class="">View our hand-picked campgrounds from all over the world or add your own.</p>
                 <div class="lg:flex flex-row gap-5">
-                    <input class="input p-4 w-full md:w-32 rounded-xl" type="text" placeholder="&#xF002; Search for Camps" style="font-family:Arial, FontAwesome" />
+                    <input class="input p-4 w-full lg:w-48 md:w-32 rounded-xl" type="text" placeholder="&#xF002; Search for Camps" style="font-family:Arial, FontAwesome" />
                     <button id="btn" class=" bg-black md:w-32 lg:w-32 w-full text-white p-4 rounded-lg" type="button">Search</button>
                 </div>
                 <p class="underline cursor-pointer">Or add your own campground</p>
