--- a/searchpage.html
+++ b/searchpage.html
@@ -5,22 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Search for campgrounds</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
-    <link rel="stylesheet" href="../dist/output.css">
+    <link rel="stylesheet" href="./dist/output.css">
 </head>
 <body>
     <!-- nav bar -->
     <nav class="bg-gray-50 w-4/5  sm:mx-auto mx-auto top-0 py-4 px-6 my-3 flex sticky md:justify-between lg:justify-between justify-between items-center">
         <div class="flex items-center ">
-            <img src="../Assets/Logo.svg" alt="Logo" class="w-1/2 md:w-4/5 lg:w-full h-8 hover:animate-bounce">
+            <img src="./Assets/Logo.svg" alt="Logo" class="w-1/2 md:w-4/5 lg:w-full h-8 hover:animate-bounce">
             <a href="index.html" class="ml-4 text-ash hover:no-underline hover:animate-bounce hidden lg:block">Home</a>
         </div>
         <!-- <button id="hamburger-menu" class="lg:hidden">
             ☰  Hamburger icon 
         </button> -->
-        <img src="../Assets/Hamburger Menu.svg" id="hamburger-menu" class="lg:hidden" alt="hamburger-menu"/>
+        <img src="./Assets/Hamburger Menu.svg" id="hamburger-menu" class="lg:hidden" alt="hamburger-menu"/>
 
         <div id="menu-items" class="hidden lg:text-lg md:text-[15px] text-[10px] lg:flex lg:flex-row items-center space-x-1 lg:space-x-4">
-            <img src="../Assets/Close.svg" id="close" class="lg:hidden cursor-pointer" alt="close"/>
+            <img src="./Assets/Close.svg" id="close" class="lg:hidden cursor-pointer" alt="close"/>
             <a href="#" class="text-ash hover:no-underline hover:animate-bounce hover:text-ash mr-1 md:mr-4 lg:mr-4">Login</a>
             <button class="bg-black text-white py-2 px-4 hover:animate-bounce hover:bg-opacity-80">Create Account</button>
         </div>
@@ -59,10 +59,10 @@
             </div>
         </div>
         <div>
-            <img src="../Assets/Logo.svg" alt="logo" class="mt-16">
+            <img src="./Assets/Logo.svg" alt="logo" class="mt-16">
         </div>
     </section>
     
-    <script src="search.js"></script>
+    <script src="./search.js"></script>
 </body>
 </html>
