--- a/carddetails.html
+++ b/carddetails.html
@@ -52,7 +52,7 @@
         </section>
     </div>
     <div id="popupContainer" class="popup hidden fixed top-0 left-0 w-full h-full">
-        <div class="popup-content bg-white absolute top-[80%] right-[50%] transform translate-x-1/2 -translate-y-1/2 p-5 rounded-lg shadow-lg">
+        <div class="popup-content w-1/4 bg-white absolute top-[80%] right-[50%] transform translate-x-1/2 -translate-y-1/2 p-5 rounded-lg shadow-lg">
             <span class="close-button absolute top-[10px] right-[10px] cursor-pointer text-2xl" id="closePopupButton">&times;</span>
             <div class="flex flex-col">
                 <input class="input p-2 mb-5 border-b-2 w-3/4 md:w-38 " placeholder="&#xF002; Name of Reviewer" style="font-family:Arial, FontAwesome" type="text" id="nameOfReviewer"/>
