--- a/carddetails.html
+++ b/carddetails.html
@@ -33,7 +33,7 @@
             <div class="w-full lg:w-4/5 mx-auto flex lg:flex-row gap-10 flex-col justify-around">
                 <div id="mapContainer" class="lg:w-auto md:w-full w-full lg:order-1 md:order-2 order-2">
                     <!-- Embed an Earth map here -->
-                    <img src="/Assets/Map.png" alt="map" class="border-2 border-solid p-10 w-full" lazy="loading">
+                    <img src="./Assets/Map.png" alt="map" class="border-2 border-solid p-10 w-full" lazy="loading">
                 </div>
                 <div class="grid grid-flow-row gap-10 w-full lg:w-[60%] lg:order-2 md:order-1 order-1">
                     <div id="detailsContainer" class="p-5 border-2 border-solid rounded items-center w-full">
