--- a/searchpage.html
+++ b/searchpage.html
@@ -32,7 +32,7 @@
         <div class="bg-gray-50 p-0 md:p-10 lg:p-10 flex justify-center items-center md:justify-start lg:justify-start lg:items-center ">
            <!-- Search Page Welcome card -->
             <div class="w-[95%] md:w-9/12 lg:w-1/4 grid grid-flow-row gap-1 ">
-                <h1 class="text-3xl font-bold lg:w-full md:w-4/5 lg:mx-0 mx-auto">Welcome to YelpCamp!</h1>
+                <h1 class="text-3xl font-bold lg:w-full w-4/5 lg:mx-0 mx-auto">Welcome to YelpCamp!</h1>
                 <p class="lg:w-full w-4/5 lg:mx-0 mx-auto">View our hand-picked campgrounds from all over the world or add your own.</p>
                 <div class="lg:w-full w-4/5 lg:mx-0 mx-auto lg:flex flex-row gap-5">
                     <input class="input p-4 w-full lg:w-48 md:w-32 rounded-xl lg:mb-0 mb-4" type="text" placeholder="&#xF002; Search for Camps" style="font-family:Arial, FontAwesome" />
