worked on the nav bar

--- a/searchpage.html
+++ b/searchpage.html
@@ -26,8 +26,14 @@
         </div>
     </nav>
 
-
+  
     <!-- Search Page -->
+<div class="grid grid-flow-row">
+    <div id="menu" class="border border-gray-300 hidden w-4/5 my-4 mx-auto py-8 px-4 md:px-6 rounded-xl bg-gray-100">
+        <img src="./Assets/Close.svg" id="closer" class=" cursor-pointer" alt="close"/>
+        <a href="#" class="text-ash hover:no-underline hover:animate-bounce hover:text-ash mr-1 md:mr-4 lg:mr-4">Login</a>
+        <button class="bg-black text-white w-full py-2 px-4 hover:animate-bounce hover:bg-opacity-80">Create Account</button>
+    </div>
     <section class="w-4/5 mx-auto">
         <div class="bg-gray-50 p-0 md:p-10 lg:p-10 flex justify-center items-center md:justify-start lg:justify-start lg:items-center ">
            <!-- Search Page Welcome card -->
@@ -62,7 +68,7 @@
             <img src="./Assets/Logo.svg" alt="logo" class="mt-16">
         </div>
     </section>
-    
+</div>
     <script src="./search.js"></script>
 </body>
 </html>
